home-assistant/pvc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
