home-assistant/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: home-assistant
  name: home-assistant
spec:
  selector:
    app: home-assistant
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8123
    - name: ws
      protocol: TCP
      port: 5580 # Matter Server Port
      targetPort: 5580 # Matter Server container port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-assistant
  name: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      nodeSelector:
        kubernetes.io/hostname: nucbox-g3
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:2025.2.5
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 8123
          volumeMounts:
            # Mount the main config volume which now contains files copied by the init container
            - mountPath: /config
              name: config
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
                - SYS_ADMIN
      volumes:
        # The main PVC where Home Assistant runs and where files are copied
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-pvc
        # The volume that holds the ConfigMap data, used only by the init container
        - name: configmap-file
          configMap:
            name: home-assistant-configmap
